# serializer version: 1
# name: test_load[ball_and_stick-mol]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-mol].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].13
  [[1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]]
# ---
# name: test_load[ball_and_stick-mol].14
  [[-1.04e-02 -3.20e-02  1.26e-02]
   [-1.07e-02  9.64e-03 -1.00e-06]
   [ 2.98e-02  1.05e-02  4.34e-03]
   [-6.32e-03 -1.56e-02 -2.08e-03]
   [-6.84e-03 -1.41e-02  2.62e-10]
   [ 1.90e-03  2.68e-02  6.00e-06]
   [-9.88e-03 -3.02e-02 -2.97e-03]
   [-1.60e-02  2.87e-02 -3.00e-06]
   [-9.86e-03 -3.38e-02  1.20e-02]
   [ 3.33e-02  1.64e-02  2.28e-03]
   [ 3.87e-04 -7.71e-03 -2.69e-03]
   [-1.03e-02  1.31e-02  2.44e-03]
   [-3.20e-03 -1.02e-02 -2.60e-03]
   [-9.69e-03 -1.78e-02  0.00e+00]
   [-1.93e-02  2.46e-02 -2.27e-03]
   [-2.32e-02  2.81e-02  2.00e-06]
   [-1.99e-02  5.50e-05 -4.34e-03]
   [-7.03e-03 -3.31e-02 -8.94e-03]
   [-1.05e-02 -3.56e-02 -8.94e-03]
   [-2.59e-02  1.99e-02  8.88e-03]
   [-2.07e-02  2.38e-02  7.00e-06]
   [ 3.24e-02  1.64e-02  1.05e-02]
   [-2.52e-02 -2.40e-02  1.10e-05]
   [-2.52e-02 -2.76e-02  3.61e-03]
   [-2.78e-02  2.21e-02 -1.19e-02]
   [-8.40e-03 -9.17e-03  2.08e-03]
   [ 3.31e-02  1.62e-02 -1.06e-02]
   [-2.72e-02  2.39e-02  8.88e-03]
   [-1.12e-02  1.27e-02 -1.00e-06]
   [-1.82e-02  5.50e-05  4.33e-03]
   [ 1.14e-02 -2.31e-02  2.00e-06]
   [-1.94e-02  1.54e-02  2.60e-03]
   [ 6.41e-03  1.02e-03  4.33e-03]
   [-1.91e-02 -2.49e-03  5.10e-03]
   [-3.44e-02 -2.16e-03 -2.40e-03]
   [ 2.59e-02 -9.45e-03  4.34e-03]
   [-1.92e-02  2.61e-02 -2.60e-03]
   [-2.99e-02  2.28e-02 -1.19e-02]
   [ 3.37e-02  1.81e-02  1.06e-02]
   [ 1.90e-02  3.74e-03 -2.45e-03]
   [ 1.51e-02 -1.83e-02 -2.60e-03]
   [ 2.19e-02 -1.58e-03 -3.00e-06]
   [-9.86e-03 -3.02e-02  1.20e-02]
   [-2.08e-02  3.30e-02 -3.00e-06]
   [-1.49e-02  3.17e-02  1.61e-03]
   [ 1.21e-02  5.14e-03  2.67e-03]
   [-2.30e-02  2.19e-02 -5.09e-03]
   [-2.03e-02  2.05e-02  7.00e-06]
   [ 3.67e-02 -1.47e-02 -3.05e-03]
   [-7.38e-03 -3.20e-02  7.06e-03]
   [ 3.26e-02  2.10e-02  9.00e-03]
   [-2.78e-02  1.99e-02 -1.19e-02]
   [-2.43e-02  2.60e-02  2.69e-03]
   [-1.08e-02 -1.41e-02  2.60e-03]
   [ 2.79e-02  1.62e-02  1.06e-02]
   [ 1.13e-02  2.59e-03  4.33e-03]
   [-3.00e-02 -5.57e-04  2.04e-03]
   [ 3.86e-02  6.69e-03  2.00e-06]
   [ 2.96e-02 -1.20e-02  2.28e-03]
   [-1.01e-02  1.32e-02 -2.08e-03]
   [ 3.73e-03  4.17e-03 -8.00e-06]
   [ 4.20e-02  7.80e-03 -3.60e-03]
   [ 7.65e-03 -4.35e-03  2.59e-03]
   [-1.58e-02  8.85e-03 -1.00e-06]
   [-2.60e-02  2.60e-02  7.00e-06]
   [-2.63e-02  2.10e-02  6.99e-03]
   [ 3.57e-02 -1.76e-02  3.07e-03]
   [-1.92e-02  2.61e-02  2.60e-03]
   [ 7.17e-03  3.11e-03  2.59e-03]
   [ 4.05e-02  6.69e-03  3.06e-03]
   [-8.46e-03 -1.69e-02 -2.44e-03]
   [-1.23e-02  1.46e-02 -2.45e-03]
   [-2.16e-02  2.12e-02  2.61e-03]
   [ 2.56e-03 -1.44e-02  2.68e-03]
   [ 3.54e-02  1.46e-02  2.68e-03]
   [ 5.96e-03  2.18e-02  2.05e-03]
   [ 3.41e-02 -1.86e-02  8.00e-06]
   [ 4.01e-02  7.80e-03 -3.06e-03]
   [-2.89e-02  1.81e-02  8.88e-03]
   [ 3.52e-02 -1.22e-02  8.00e-06]
   [-2.49e-02 -4.95e-03 -2.60e-03]
   [ 2.92e-02  1.68e-02  3.03e-03]
   [ 3.25e-02  1.34e-02  2.60e-03]
   [-1.93e-02 -1.01e-03  2.59e-03]
   [ 3.11e-02  1.63e-02  1.21e-02]
   [ 1.53e-02 -1.56e-02 -2.44e-03]
   [-2.77e-02 -2.58e-02 -1.88e-03]
   [-2.93e-02  2.10e-02  5.28e-03]
   [ 3.39e-02  1.70e-02 -8.99e-03]
   [ 2.80e-02  1.63e-02 -1.09e-02]
   [-1.68e-02  1.32e-02  2.08e-03]
   [ 8.75e-03 -8.69e-03 -4.00e-06]
   [ 8.99e-04 -6.14e-03 -4.00e-06]
   [-1.05e-02 -3.20e-02 -1.25e-02]
   [ 3.07e-04  1.42e-02  5.09e-03]
   [ 2.42e-02  2.85e-03 -3.96e-03]
   [ 5.67e-03  9.28e-03 -2.61e-03]
   [-2.78e-02  2.21e-02  5.82e-03]
   [-2.44e-02  2.62e-02 -2.27e-03]
   [ 2.36e-02  1.72e-03 -2.60e-03]]
# ---
# name: test_load[ball_and_stick-mol].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].2
  [0.01 0.02 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.02 0.02 0.02 0.02
   0.02 0.01 0.02 0.01 0.01 0.01 0.02 0.01 0.01 0.01 0.01 0.02 0.01 0.01
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.02 0.02
   0.01 0.01 0.01 0.02 0.02 0.02 0.01 0.01 0.01 0.01 0.02 0.02 0.01 0.02
   0.02 0.01 0.02 0.02 0.02 0.01 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.01
   0.02 0.02 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.01 0.02 0.01 0.02 0.02
   0.01 0.02 0.01 0.01 0.01 0.01 0.02 0.02 0.02 0.01 0.02 0.02 0.02 0.01
   0.02 0.02]
# ---
# name: test_load[ball_and_stick-mol].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].22
  [1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 2 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 2 1 1 1 1 1 2 1 1 1 1 1
   1 2 1 1 1 1 2 1 1 2 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load[ball_and_stick-mol].23
  [ 1.01 14.01 12.01 14.01 14.01 16.00  6.51  1.01  1.01 12.01 12.01 14.01
   13.01 14.01 12.01  6.51 12.01  1.01  1.01  1.01 12.01  1.01  1.01  1.01
    1.01 14.01  1.01  1.01 14.01 12.01 14.01 13.01 12.01 12.01 16.00 12.01
    6.51  1.01  1.01 14.01 14.01 14.01  1.01  1.01  1.01 12.01 12.01 12.01
    1.01  1.01  1.01  1.01 12.01 14.01  1.01 12.01 16.00  1.01 12.01 14.01
   12.01  1.01 12.01 14.01 12.01  1.01  1.01  6.51 12.01  1.01 14.01 14.01
   12.01 12.01 12.01 16.00  1.01  1.01  1.01  1.01 14.01  6.51 12.01 12.01
    1.01 14.01  1.01  1.01  1.01  1.01 14.01 12.01 12.01  1.01 12.01 14.01
   12.01  1.01 12.01 14.01]
# ---
# name: test_load[ball_and_stick-mol].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-mol].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-mol].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-mol].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-mol].7
  [1 7 6 7 7 8 4 1 1 6 6 7 7 7 6 4 6 1 1 1 6 1 1 1 1 7 1 1 7 6 7 7 6 6 8 6 4
   1 1 7 7 7 1 1 1 6 6 6 1 1 1 1 6 7 1 6 8 1 6 7 6 1 6 7 6 1 1 4 6 1 7 7 6 6
   6 8 1 1 1 1 7 4 6 6 1 7 1 1 1 1 7 6 6 1 6 7 6 1 6 7]
# ---
# name: test_load[ball_and_stick-mol].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-mol].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-sdf].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].13
  [[1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]]
# ---
# name: test_load[ball_and_stick-sdf].14
  [[ 1.21e-02 -2.47e-02 -6.90e-03]
   [ 2.67e-02  1.38e-02 -1.36e-04]
   [-6.22e-03  3.41e-02  4.57e-03]
   [ 1.56e-02  1.83e-02 -2.26e-03]
   [ 1.57e-03 -2.61e-03  2.00e-05]
   [-3.17e-03  1.40e-02  9.80e-05]
   [ 4.22e-02  1.83e-02 -5.65e-04]
   [-2.60e-02  1.76e-02  1.05e-02]
   [ 1.27e-02 -2.65e-02 -7.44e-03]
   [-2.64e-03  4.00e-02  2.51e-03]
   [-1.35e-02 -4.06e-03 -2.31e-03]
   [ 2.69e-02  1.62e-02  2.31e-03]
   [-6.20e-03  1.78e-02 -2.45e-03]
   [ 1.19e-02  1.59e-02  2.00e-05]
   [-2.09e-02  2.38e-02 -2.05e-03]
   [-2.58e-02  1.79e-02  5.37e-03]
   [ 3.57e-02  2.34e-02 -4.56e-03]
   [ 4.74e-02  1.38e-02 -5.46e-03]
   [ 4.40e-02  1.13e-02 -5.46e-03]
   [-2.62e-02  2.82e-02 -4.85e-03]
   [ 3.80e-02  1.83e-02 -2.20e-04]
   [-7.80e-03  4.59e-02  2.90e-03]
   [ 3.54e-02  3.41e-02 -5.29e-03]
   [ 3.54e-02  3.05e-02 -1.69e-03]
   [-2.51e-02  1.29e-02 -8.02e-03]
   [ 1.33e-02  2.53e-02  2.30e-03]
   [ 5.98e-03 -2.68e-02  3.38e-03]
   [-2.76e-02  3.23e-02 -4.85e-03]
   [ 2.52e-02  1.12e-02 -1.36e-04]
   [ 3.74e-02  2.34e-02  4.12e-03]
   [ 6.20e-03  3.03e-02  1.18e-04]
   [ 2.94e-02  1.87e-02  2.42e-03]
   [ 9.91e-03 -7.90e-03  3.83e-03]
   [ 3.65e-02  2.09e-02  4.88e-03]
   [-3.49e-03  2.51e-03 -2.66e-03]
   [ 1.30e-02 -1.86e-02  4.13e-03]
   [-2.90e-02  2.18e-02  4.51e-03]
   [-2.73e-02  1.36e-02 -8.02e-03]
   [-5.91e-03  4.52e-02  1.91e-03]
   [-1.33e-02  2.60e-02 -2.25e-03]
   [ 9.10e-03  3.55e-02 -2.48e-03]
   [ 1.34e-02  2.36e-02  2.00e-05]
   [ 1.27e-02 -2.29e-02 -7.44e-03]
   [-2.76e-02  1.75e-02  1.05e-02]
   [-2.49e-02  2.05e-02  1.21e-02]
   [ 1.51e-02 -4.14e-03  2.32e-03]
   [-2.46e-02  2.12e-02 -4.87e-03]
   [-2.51e-02  2.41e-02  2.26e-04]
   [ 4.14e-02  2.37e-02  6.97e-03]
   [ 1.52e-02 -2.47e-02 -1.24e-02]
   [-7.01e-03  4.81e-02  3.03e-04]
   [-2.51e-02  1.07e-02 -8.02e-03]
   [-2.59e-02  2.53e-02  2.91e-03]
   [ 7.61e-04  1.26e-03  2.62e-03]
   [-1.17e-02  4.33e-02  1.91e-03]
   [ 1.43e-02 -6.47e-03  3.83e-03]
   [ 1.43e-03  4.30e-03  2.30e-03]
   [ 1.77e-02 -2.57e-02  4.82e-03]
   [ 1.67e-02 -2.11e-02  2.07e-03]
   [ 2.71e-02  1.63e-02 -2.22e-03]
   [ 7.46e-03 -5.03e-03 -1.28e-04]
   [ 2.12e-02 -2.46e-02  1.22e-03]
   [ 1.35e-02 -1.38e-02  2.43e-03]
   [ 2.23e-02  1.65e-02 -1.36e-04]
   [-2.76e-02  2.53e-02  2.26e-04]
   [-2.66e-02  2.94e-02 -6.74e-03]
   [ 4.04e-02  2.08e-02  1.31e-02]
   [-2.42e-02  2.28e-02  6.23e-03]
   [ 1.04e-02 -6.51e-03  2.47e-03]
   [ 1.96e-02 -2.57e-02  7.89e-03]
   [ 1.32e-02  1.69e-02 -2.66e-03]
   [ 2.49e-02  1.76e-02 -2.58e-03]
   [-2.24e-02  2.31e-02  1.09e-03]
   [-1.16e-02 -1.00e-02  2.49e-03]
   [-5.43e-04  3.82e-02  2.91e-03]
   [ 1.24e-03  9.73e-03  2.38e-03]
   [ 4.12e-02  1.99e-02  1.00e-02]
   [ 1.93e-02 -2.46e-02  1.76e-03]
   [-3.22e-02  2.78e-02 -4.85e-03]
   [ 3.98e-02  2.62e-02  1.00e-02]
   [ 6.58e-03  1.62e-02 -2.54e-03]
   [-7.92e-03  3.97e-02 -2.33e-03]
   [ 1.16e-02 -1.93e-02  2.10e-03]
   [ 1.11e-02  2.23e-02  2.62e-03]
   [-8.54e-03  4.34e-02  3.37e-03]
   [ 1.02e-02  3.78e-02 -2.33e-03]
   [ 3.29e-02  3.23e-02 -7.19e-03]
   [-2.97e-02  2.94e-02 -8.45e-03]
   [ 6.80e-03 -2.61e-02  4.99e-03]
   [ 8.96e-04 -2.67e-02  3.10e-03]
   [ 2.04e-02  1.63e-02  1.94e-03]
   [-6.06e-03 -4.93e-03  9.00e-05]
   [-1.31e-02 -2.65e-03  9.00e-05]
   [ 4.40e-02  1.49e-02 -9.07e-03]
   [ 2.35e-02  3.68e-04  4.89e-03]
   [-8.16e-03  2.51e-02 -3.77e-03]
   [ 2.79e-02 -3.98e-03 -2.88e-03]
   [-2.81e-02  3.05e-02 -7.91e-03]
   [-2.60e-02  2.55e-02 -2.05e-03]
   [ 1.04e-02  2.07e-02 -2.58e-03]]
# ---
# name: test_load[ball_and_stick-sdf].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].2
  [0.01 0.02 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.02 0.02 0.02 0.02
   0.02 0.01 0.02 0.01 0.01 0.01 0.02 0.01 0.01 0.01 0.01 0.02 0.01 0.01
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.02 0.02
   0.01 0.01 0.01 0.02 0.02 0.02 0.01 0.01 0.01 0.01 0.02 0.02 0.01 0.02
   0.02 0.01 0.02 0.02 0.02 0.01 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.01
   0.02 0.02 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.01 0.02 0.01 0.02 0.02
   0.01 0.02 0.01 0.01 0.01 0.01 0.02 0.02 0.02 0.01 0.02 0.02 0.02 0.01
   0.02 0.02]
# ---
# name: test_load[ball_and_stick-sdf].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].22
  [1 1 1 1 2 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1
   1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2
   1 1 1 1 1 1 2 1 1 2 1 2 1 1 1 1 1 2 2 1 1 1 2 1 1 1]
# ---
# name: test_load[ball_and_stick-sdf].23
  [ 1.01 14.01 12.01 12.01 12.01 12.01  6.51  1.01  1.01 12.01 16.00 14.01
   13.01 12.01 12.01  6.51 12.01  1.01  1.01  1.01 12.01  1.01  1.01  1.01
    1.01 12.01  1.01  1.01 14.01 12.01 14.01 13.01 14.01 12.01 12.01 12.01
    6.51  1.01  1.01 14.01 14.01 12.01  1.01  1.01  1.01 14.01 12.01 12.01
    1.01  1.01  1.01  1.01 12.01 12.01  1.01 14.01 12.01  1.01 12.01 14.01
   14.01  1.01 13.01 14.01 12.01  1.01  1.01  6.51 14.01  1.01 12.01 14.01
   12.01 16.00 12.01 12.01  1.01  1.01  1.01  1.01 12.01  6.51 12.01 12.01
    1.01 14.01  1.01  1.01  1.01  1.01 14.01 16.00 16.00  1.01 12.01 14.01
   14.01  1.01 12.01 12.01]
# ---
# name: test_load[ball_and_stick-sdf].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-sdf].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-sdf].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-sdf].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-sdf].7
  [1 7 6 6 6 6 4 1 1 6 8 7 7 6 6 4 6 1 1 1 6 1 1 1 1 6 1 1 7 6 7 7 7 6 6 6 4
   1 1 7 7 6 1 1 1 7 6 6 1 1 1 1 6 6 1 7 6 1 6 7 7 1 7 7 6 1 1 4 7 1 6 7 6 8
   6 6 1 1 1 1 6 4 6 6 1 7 1 1 1 1 7 8 8 1 6 7 7 1 6 6]
# ---
# name: test_load[ball_and_stick-sdf].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-sdf].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-mol].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].13
  [[1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [0.80 0.16 0.16 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]]
# ---
# name: test_load[spheres-mol].14
  [[ 3.30e-02  1.03e-02 -1.40e-02]
   [-2.08e-02  2.87e-02  1.16e-02]
   [ 3.74e-02  1.30e-02  4.71e-03]
   [-3.64e-02 -6.78e-04  1.03e-02]
   [-2.58e-02 -2.70e-02  7.16e-03]
   [ 4.20e-02 -1.80e-03  2.00e-06]
   [ 2.01e-02  2.59e-03 -7.16e-03]
   [ 6.68e-03  1.96e-02  1.03e-02]
   [ 4.70e-03  2.57e-02 -1.22e-02]
   [ 3.40e-02  5.24e-03 -3.00e-06]
   [-2.25e-02 -3.58e-02  4.30e-03]
   [ 3.36e-02 -2.06e-02 -8.16e-03]
   [-1.65e-02 -2.02e-02 -1.16e-02]
   [-2.02e-02  1.81e-02 -8.85e-03]
   [ 4.45e-02  1.56e-02 -5.05e-03]
   [-5.40e-03 -3.20e-02  1.71e-02]
   [-2.28e-02  9.07e-03 -6.09e-03]
   [ 3.22e-04 -2.13e-02  7.15e-03]
   [ 4.86e-02  3.00e-03  5.05e-03]
   [ 1.63e-02  2.19e-02  6.00e-06]
   [ 5.85e-04 -8.41e-03 -8.00e-06]
   [-7.13e-03 -2.70e-02  1.16e-02]
   [ 3.96e-02  2.11e-02 -8.99e-03]
   [-2.40e-02  1.08e-02  6.52e-03]
   [-1.30e-02 -3.97e-02  1.40e-02]
   [-1.81e-02  3.17e-02  9.60e-03]
   [ 1.29e-02 -1.20e-02 -6.08e-03]
   [-3.63e-02  2.61e-02  1.32e-02]
   [-1.31e-02  2.90e-02 -6.08e-03]
   [-1.92e-02  1.03e-02  6.09e-03]
   [-3.43e-02 -3.06e-02  1.10e-05]
   [-1.17e-02 -1.93e-02 -1.05e-02]
   [-2.53e-02  1.46e-02 -1.00e-06]
   [-1.50e-02  3.29e-02  7.00e-06]
   [-3.23e-02  2.87e-02 -7.14e-03]
   [-1.31e-02 -4.01e-02  4.66e-03]
   [ 2.13e-02  1.51e-02 -8.99e-03]
   [-3.84e-03 -3.68e-02  1.40e-02]
   [ 6.37e-03  9.39e-03 -1.16e-02]
   [-2.93e-02  3.06e-02 -8.85e-03]
   [ 3.05e-02  8.49e-03 -8.99e-03]
   [ 4.18e-02 -1.10e-02  5.06e-03]
   [-1.95e-02 -1.98e-02  1.10e-05]
   [-6.26e-03 -2.37e-02  5.55e-03]
   [ 3.05e-02  8.48e-03  9.00e-03]
   [ 2.86e-02 -2.30e-02 -7.15e-03]
   [-9.53e-03  7.07e-03  6.08e-03]
   [-9.69e-03 -1.31e-02  1.24e-02]
   [-1.13e-02  1.42e-02  7.14e-03]
   [ 3.30e-02  2.59e-02 -1.40e-02]
   [-1.69e-02  4.30e-03  1.16e-02]
   [-2.24e-02  2.61e-02 -1.31e-02]
   [ 4.82e-03  1.42e-02 -6.09e-03]
   [ 2.15e-02 -9.95e-04  7.15e-03]
   [-2.67e-02  1.29e-02 -4.56e-03]
   [-2.08e-02  2.10e-02 -4.56e-03]
   [ 3.69e-02  7.80e-03 -8.16e-03]
   [-1.67e-02  7.65e-04  6.52e-03]
   [-1.90e-02 -3.20e-02  4.66e-03]
   [-1.71e-02 -2.72e-02 -1.40e-02]
   [ 2.54e-02  1.81e-02 -1.72e-02]
   [ 1.38e-04  1.30e-03 -6.09e-03]
   [ 8.62e-04 -1.31e-02 -6.52e-03]
   [-3.46e-02  5.91e-03 -5.44e-03]
   [ 3.77e-02 -2.36e-02 -5.04e-03]
   [-2.93e-02  2.10e-02 -7.19e-04]
   [-1.15e-02  4.60e-03  1.05e-02]
   [ 2.35e-02  1.30e-02  1.33e-02]
   [-8.89e-03 -2.72e-02 -7.71e-04]
   [-2.07e-02  2.10e-02  1.32e-02]
   [-3.27e-03  3.22e-03  7.14e-03]
   [-4.92e-03 -2.02e-02  7.16e-03]
   [ 2.89e-02  1.33e-02  8.38e-04]
   [-3.63e-02  1.60e-02  1.32e-02]
   [-6.19e-03  2.08e-02 -1.00e-06]
   [ 4.49e-02  1.63e-02  3.00e-06]
   [ 4.21e-02 -2.08e-02 -4.29e-03]
   [-4.81e-03 -2.42e-02 -8.94e-03]
   [-1.04e-02 -3.20e-02 -6.43e-04]
   [-1.81e-02  4.13e-02 -3.00e-06]
   [-2.27e-02  1.62e-02  1.39e-02]
   [ 3.19e-02  1.21e-02  1.36e-02]
   [-6.86e-03  2.94e-02  6.00e-06]
   [-1.71e-02 -3.68e-02 -1.40e-02]
   [-3.18e-02  2.88e-02  1.39e-02]
   [ 8.84e-03 -1.55e-02  1.06e-02]
   [ 2.95e-02 -8.02e-03  8.00e-06]
   [ 1.57e-02 -5.20e-03 -7.15e-03]
   [-3.25e-03 -1.03e-02 -1.16e-02]
   [-1.26e-02  1.84e-02 -6.00e-06]
   [ 4.33e-02 -1.58e-02 -5.04e-03]
   [-3.17e-03 -1.31e-02  1.05e-02]
   [-1.87e-02 -1.96e-02  5.55e-03]
   [ 2.21e-02  1.92e-02  6.09e-03]
   [-1.96e-02  3.65e-02 -8.17e-03]
   [-1.61e-02 -3.06e-02  1.10e-05]
   [ 2.84e-02  1.06e-03  7.15e-03]
   [-1.67e-02  2.08e-02  6.52e-03]
   [-1.29e-02 -3.09e-03  6.52e-03]
   [ 2.70e-02 -1.58e-02  5.06e-03]]
# ---
# name: test_load[spheres-mol].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].2
  [0.01 0.02 0.01 0.02 0.02 0.01 0.02 0.02 0.02 0.02 0.01 0.01 0.02 0.01
   0.01 0.01 0.02 0.02 0.01 0.02 0.02 0.02 0.01 0.02 0.01 0.01 0.02 0.01
   0.02 0.02 0.01 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.01 0.01 0.01
   0.01 0.02 0.01 0.02 0.02 0.02 0.02 0.01 0.02 0.01 0.02 0.02 0.01 0.01
   0.01 0.02 0.01 0.01 0.01 0.02 0.02 0.02 0.01 0.01 0.02 0.01 0.01 0.01
   0.02 0.02 0.01 0.01 0.02 0.02 0.01 0.01 0.01 0.01 0.01 0.02 0.02 0.01
   0.01 0.02 0.01 0.02 0.02 0.02 0.01 0.02 0.02 0.02 0.01 0.01 0.02 0.02
   0.02 0.01]
# ---
# name: test_load[spheres-mol].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].22
  [1 1 1 2 1 1 1 2 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load[spheres-mol].23
  [ 1.01 12.01  1.01 16.00 12.01  1.01 12.01 16.00 16.00 14.01  1.01  1.01
   12.01  1.01  1.01  1.01 12.01 12.01  1.01 16.00 12.01 12.01  1.01 14.01
    1.01  1.01 12.01  1.01 12.01 12.01  1.01 14.01 14.01 12.01 12.01  1.01
    1.01  1.01 12.01  1.01  1.01  1.01  1.01 14.01  1.01 12.01 12.01 14.01
   12.01  1.01 12.01  1.01 12.01 12.01  1.01  1.01  1.01 14.01  1.01  1.01
    1.01 12.01 14.01 16.00  1.01  1.01 14.01  1.01  1.01  1.01 12.01 12.01
    1.01  1.01 14.01 12.01  1.01  1.01  1.01  1.01  1.01 12.01 16.00  1.01
    1.01 14.01  1.01 12.01 12.01 12.01  1.01 14.01 14.01 12.01  1.01  1.01
   12.01 14.01 14.01  1.01]
# ---
# name: test_load[spheres-mol].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-mol].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-mol].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-mol].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-mol].7
  [1 6 1 8 6 1 6 8 8 7 1 1 6 1 1 1 6 6 1 8 6 6 1 7 1 1 6 1 6 6 1 7 7 6 6 1 1
   1 6 1 1 1 1 7 1 6 6 7 6 1 6 1 6 6 1 1 1 7 1 1 1 6 7 8 1 1 7 1 1 1 6 6 1 1
   7 6 1 1 1 1 1 6 8 1 1 7 1 6 6 6 1 7 7 6 1 1 6 7 7 1]
# ---
# name: test_load[spheres-mol].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-mol].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-sdf].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].13
  [[1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.16 0.23 0.80 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.80 0.16 0.16 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]
   [1.00 1.00 1.00 1.00]
   [0.36 0.37 0.84 1.00]
   [0.16 0.23 0.80 1.00]
   [0.36 0.37 0.84 1.00]
   [1.00 1.00 1.00 1.00]]
# ---
# name: test_load[spheres-sdf].14
  [[ 5.90e-03 -3.27e-02 -5.41e-05]
   [-2.24e-02  2.80e-02  1.18e-02]
   [-2.18e-03  4.01e-02 -3.99e-03]
   [-5.76e-03  4.16e-03  1.16e-02]
   [ 2.36e-02 -5.76e-03  6.04e-03]
   [ 2.12e-02 -3.42e-02  4.82e-03]
   [ 2.24e-02 -6.47e-03 -6.65e-03]
   [ 2.04e-03  7.27e-03  1.17e-02]
   [-1.71e-04  1.41e-02 -1.35e-02]
   [ 1.66e-03  2.75e-02  1.90e-04]
   [ 3.80e-02  2.23e-02 -1.00e-03]
   [ 3.83e-02  1.78e-02  1.87e-03]
   [ 3.20e-02  3.19e-04 -1.07e-02]
   [-1.75e-02  8.85e-03 -4.96e-03]
   [ 2.37e-02 -1.68e-02 -2.22e-04]
   [ 1.72e-02 -2.47e-02 -2.34e-03]
   [ 3.28e-02  3.25e-02 -6.30e-03]
   [-1.36e-02 -1.62e-02  6.48e-03]
   [ 2.78e-02 -2.94e-02  9.87e-03]
   [ 1.28e-02  9.87e-03  9.80e-05]
   [ 4.60e-03 -1.65e-02 -1.28e-04]
   [ 4.04e-02 -5.76e-03  9.99e-03]
   [ 1.25e-02 -2.20e-02  4.99e-03]
   [ 1.32e-02  1.38e-02  6.38e-03]
   [ 9.60e-03 -3.25e-02 -5.46e-03]
   [-2.81e-02  2.05e-02  2.01e-02]
   [-9.20e-06 -2.11e-02 -6.29e-03]
   [-3.66e-02  3.44e-02 -5.53e-04]
   [-1.47e-02  2.83e-02 -5.86e-03]
   [-2.08e-02  9.60e-03  6.31e-03]
   [ 2.63e-02  2.75e-02 -5.29e-03]
   [ 9.66e-03  1.42e-02 -1.15e-02]
   [ 1.19e-02  1.77e-02 -1.36e-04]
   [-1.66e-02  3.22e-02  2.26e-04]
   [-3.39e-02  2.80e-02 -6.92e-03]
   [ 9.47e-03 -3.29e-02 -1.48e-02]
   [-5.76e-03 -2.79e-02  4.99e-03]
   [ 1.87e-02 -2.95e-02 -5.46e-03]
   [ 9.87e-03 -2.67e-04 -1.07e-02]
   [-2.67e-02  2.14e-02 -4.96e-03]
   [ 3.37e-03 -3.45e-02  4.99e-03]
   [ 4.64e-02  2.74e-02  1.51e-02]
   [ 4.10e-02  3.82e-02 -5.29e-03]
   [ 1.56e-02  9.44e-03  6.10e-03]
   [-9.13e-03  3.56e-02  3.03e-04]
   [ 1.57e-02 -3.21e-02 -7.36e-03]
   [ 1.36e-02 -6.78e-03  5.87e-03]
   [ 1.19e-02  2.10e-02  1.36e-02]
   [ 1.19e-02  3.68e-04  6.94e-03]
   [ 5.90e-03 -1.72e-02 -5.41e-05]
   [ 3.88e-02  2.77e-02  1.13e-02]
   [-1.97e-02  1.69e-02 -9.25e-03]
   [ 8.46e-03  4.08e-03 -5.67e-03]
   [ 8.58e-03 -1.01e-02  6.94e-03]
   [-2.40e-02  3.65e-03 -6.67e-04]
   [-1.81e-02  1.18e-02 -6.67e-04]
   [ 1.61e-02 -2.46e-02 -3.34e-03]
   [ 2.05e-02  3.80e-03  6.38e-03]
   [ 3.54e-03 -2.47e-02 -1.48e-02]
   [ 3.74e-02  1.97e-02 -1.05e-02]
   [-1.67e-03 -2.49e-02 -3.17e-03]
   [-1.38e-02  4.00e-03 -5.35e-03]
   [ 2.34e-02  2.10e-02 -7.13e-03]
   [-3.74e-03  1.15e-02 -6.06e-03]
   [ 4.24e-02  1.48e-02  4.99e-03]
   [-2.97e-02  2.94e-02 -1.44e-02]
   [ 2.57e-02  7.63e-03  1.04e-02]
   [-1.61e-02  4.01e-02  4.60e-03]
   [ 4.55e-02  1.97e-02  2.70e-03]
   [-2.11e-02  2.94e-02 -5.53e-04]
   [ 1.99e-02 -1.06e-02  6.94e-03]
   [ 4.23e-02  3.19e-04  6.04e-03]
   [-1.07e-02  4.04e-02 -7.86e-03]
   [-3.66e-02  2.43e-02 -5.53e-04]
   [ 3.10e-02  2.39e-02 -1.36e-04]
   [ 8.88e-03  3.99e-02  2.31e-04]
   [ 4.68e-02  1.75e-02  5.74e-03]
   [ 4.96e-02  2.27e-02 -5.46e-03]
   [ 1.21e-02 -2.47e-02 -2.01e-02]
   [-2.81e-02  3.01e-02  1.05e-02]
   [-2.31e-02  2.46e-02  2.01e-04]
   [-4.05e-03  3.57e-02  1.38e-02]
   [-1.31e-02  1.83e-02  9.80e-05]
   [ 3.74e-02  1.01e-02 -1.05e-02]
   [-3.22e-02  3.71e-02  2.01e-04]
   [ 3.66e-03  3.79e-02  1.07e-02]
   [ 3.42e-02  3.04e-02  1.00e-02]
   [ 2.80e-03 -1.43e-02 -7.36e-03]
   [-1.68e-02 -6.34e-03 -1.03e-02]
   [ 1.05e-02  4.57e-03 -2.14e-04]
   [ 4.80e-02  2.26e-02  4.99e-03]
   [ 1.90e-02  2.10e-02  1.16e-02]
   [ 2.03e-03  1.39e-02  6.10e-03]
   [-1.39e-02  4.28e-02  6.31e-03]
   [-2.97e-02  2.53e-02  2.35e-03]
   [ 4.45e-02  2.75e-02 -5.29e-03]
   [-7.63e-03  2.47e-02  7.38e-03]
   [ 2.05e-02  2.39e-02  6.38e-03]
   [ 8.29e-03  3.20e-02  7.17e-03]
   [ 3.17e-02  2.26e-02  1.51e-02]]
# ---
# name: test_load[spheres-sdf].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].2
  [0.01 0.02 0.01 0.02 0.02 0.01 0.02 0.02 0.02 0.02 0.01 0.01 0.02 0.01
   0.01 0.01 0.02 0.02 0.01 0.02 0.02 0.02 0.01 0.02 0.01 0.01 0.02 0.01
   0.02 0.02 0.01 0.02 0.02 0.02 0.02 0.01 0.01 0.01 0.02 0.01 0.01 0.01
   0.01 0.02 0.01 0.02 0.02 0.02 0.02 0.01 0.02 0.01 0.02 0.02 0.01 0.01
   0.01 0.02 0.01 0.01 0.01 0.02 0.02 0.02 0.01 0.01 0.02 0.01 0.01 0.01
   0.02 0.02 0.01 0.01 0.02 0.02 0.01 0.01 0.01 0.01 0.01 0.02 0.02 0.01
   0.01 0.02 0.01 0.02 0.02 0.02 0.01 0.02 0.02 0.02 0.01 0.01 0.02 0.02
   0.02 0.01]
# ---
# name: test_load[spheres-sdf].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].22
  [1 1 1 1 2 1 1 1 1 1 1 1 2 1 1 1 1 2 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 2 1 1
   1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load[spheres-sdf].23
  [ 1.01 12.01  1.01 12.01 16.00  1.01 14.01 12.01 12.01 14.01  1.01  1.01
   16.00  1.01  1.01  1.01 12.01 16.00  1.01 12.01 14.01 16.00  1.01 14.01
    1.01  1.01 12.01  1.01 12.01 12.01  1.01 12.01 14.01 12.01 12.01  1.01
    1.01  1.01 14.01  1.01  1.01  1.01  1.01 12.01  1.01 12.01 12.01 12.01
   12.01  1.01 12.01  1.01 14.01 12.01  1.01  1.01  1.01 14.01  1.01  1.01
    1.01 16.00 12.01 12.01  1.01  1.01 14.01  1.01  1.01  1.01 12.01 16.00
    1.01  1.01 14.01 12.01  1.01  1.01  1.01  1.01  1.01 12.01 12.01  1.01
    1.01 14.01  1.01 12.01 16.00 12.01  1.01 12.01 12.01 12.01  1.01  1.01
   12.01 14.01 12.01  1.01]
# ---
# name: test_load[spheres-sdf].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-sdf].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-sdf].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-sdf].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-sdf].7
  [1 6 1 6 8 1 7 6 6 7 1 1 8 1 1 1 6 8 1 6 7 8 1 7 1 1 6 1 6 6 1 6 7 6 6 1 1
   1 7 1 1 1 1 6 1 6 6 6 6 1 6 1 7 6 1 1 1 7 1 1 1 8 6 6 1 1 7 1 1 1 6 8 1 1
   7 6 1 1 1 1 1 6 6 1 1 7 1 6 8 6 1 6 6 6 1 1 6 7 6 1]
# ---
# name: test_load[spheres-sdf].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-sdf].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].11
  AttributeError("The selected attribute 'atom_name' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].13
  [[0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]]
# ---
# name: test_load[surface-mol].14
  [[ 0.04  0.03  0.02]
   [ 0.02 -0.04 -0.00]
   [ 0.04  0.03 -0.01]
   [-0.03  0.03 -0.02]
   [-0.01  0.04  0.01]
   [ 0.03  0.03 -0.00]
   [-0.02 -0.04 -0.00]
   [-0.02 -0.03 -0.02]
   [-0.05 -0.01 -0.00]
   [ 0.03  0.01 -0.02]
   [ 0.04 -0.02 -0.01]
   [ 0.02 -0.01  0.02]
   [-0.02  0.04  0.01]
   [ 0.03  0.03 -0.02]
   [ 0.02  0.03 -0.02]
   [-0.04  0.01  0.01]
   [-0.01 -0.05  0.01]
   [ 0.03  0.00  0.02]
   [-0.03 -0.01 -0.02]
   [-0.02 -0.04  0.02]
   [-0.02  0.05 -0.00]
   [ 0.04  0.03 -0.01]
   [-0.04 -0.03 -0.00]
   [ 0.03  0.01 -0.02]
   [ 0.05  0.01 -0.01]
   [-0.03  0.03  0.01]
   [ 0.00 -0.04 -0.01]
   [ 0.00 -0.04 -0.01]
   [ 0.00  0.04 -0.01]
   [-0.00 -0.04 -0.02]
   [-0.04 -0.03 -0.00]
   [ 0.01 -0.03 -0.01]
   [ 0.01 -0.01  0.02]
   [ 0.01  0.04 -0.01]
   [ 0.04  0.03  0.01]
   [ 0.01  0.04  0.01]
   [-0.02 -0.04 -0.02]
   [ 0.05  0.01  0.00]
   [ 0.04  0.03 -0.00]
   [ 0.03 -0.01  0.02]
   [-0.00  0.04  0.00]
   [-0.01  0.01 -0.02]
   [ 0.05 -0.01 -0.01]
   [-0.03  0.03 -0.02]
   [-0.04  0.01 -0.02]
   [-0.01 -0.04 -0.02]
   [-0.04  0.03  0.02]
   [ 0.04  0.03  0.02]
   [-0.03  0.03 -0.01]
   [ 0.05  0.02  0.01]
   [-0.03 -0.03 -0.02]
   [-0.03  0.04  0.01]
   [ 0.04  0.02  0.01]
   [ 0.05  0.02 -0.00]
   [ 0.03  0.03  0.02]
   [-0.04 -0.03 -0.00]
   [ 0.01  0.04 -0.01]
   [ 0.04 -0.03 -0.01]
   [ 0.04  0.03 -0.01]
   [-0.02 -0.04  0.02]
   [-0.00 -0.02 -0.02]
   [-0.01 -0.02 -0.02]
   [ 0.02 -0.00  0.02]
   [-0.04 -0.01 -0.01]
   [ 0.05 -0.02 -0.01]
   [ 0.04 -0.03  0.01]
   [-0.04  0.03  0.01]
   [-0.02  0.04 -0.01]
   [ 0.05 -0.02 -0.01]
   [-0.04 -0.03  0.00]
   [-0.00 -0.05 -0.01]
   [ 0.02 -0.03  0.01]
   [ 0.04 -0.01  0.01]
   [ 0.01  0.03 -0.01]
   [ 0.05  0.01 -0.01]
   [-0.01  0.03  0.01]
   [-0.02 -0.03 -0.02]
   [ 0.04 -0.03  0.01]
   [ 0.05  0.00  0.01]
   [-0.03 -0.04  0.01]
   [ 0.03 -0.03 -0.01]
   [-0.03  0.03  0.01]
   [-0.01 -0.05 -0.00]
   [-0.04  0.03 -0.01]
   [ 0.02 -0.03 -0.01]
   [ 0.03 -0.01 -0.01]
   [-0.01  0.02 -0.02]
   [-0.01  0.03  0.02]
   [ 0.00  0.04 -0.01]
   [-0.00 -0.03  0.02]
   [-0.04 -0.03  0.00]
   [ 0.02 -0.02 -0.02]
   [ 0.03 -0.02  0.02]
   [ 0.05  0.02 -0.01]
   [-0.03 -0.04  0.01]
   [-0.01 -0.03  0.02]
   [ 0.01  0.03  0.02]
   [-0.04 -0.03 -0.01]
   [-0.04  0.03 -0.02]
   [-0.02  0.04 -0.01]]
# ---
# name: test_load[surface-mol].15
  AttributeError("The selected attribute 'is_backbone' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].16
  AttributeError("The selected attribute 'is_alpha_carbon' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].17
  AttributeError("The selected attribute 'is_solvent' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].18
  AttributeError("The selected attribute 'is_nucleic' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].19
  AttributeError("The selected attribute 'is_peptide' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].2
  AttributeError("The selected attribute 'vdw_radii' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].20
  AttributeError("The selected attribute 'is_hetero' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].21
  AttributeError("The selected attribute 'is_carb' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].22
  AttributeError("The selected attribute 'bond_type' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].23
  AttributeError("The selected attribute 'mass' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].3
  AttributeError("The selected attribute 'lipophobicity' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].4
  AttributeError("The selected attribute 'charge' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].5
  AttributeError("The selected attribute 'res_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].6
  AttributeError("The selected attribute 'res_name' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].7
  AttributeError("The selected attribute 'atomic_number' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].8
  AttributeError("The selected attribute 'chain_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].11
  AttributeError("The selected attribute 'atom_name' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].13
  [[0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]]
# ---
# name: test_load[surface-sdf].14
  [[-6.81e-03 -3.59e-02  7.81e-03]
   [ 1.58e-02  3.81e-02  1.61e-02]
   [-4.48e-03  5.07e-02  1.37e-02]
   [ 2.32e-02 -3.86e-02  7.32e-03]
   [-4.02e-02  5.89e-03 -7.76e-03]
   [-1.19e-03 -1.22e-02  1.74e-02]
   [ 5.41e-02  2.39e-02  8.14e-03]
   [ 2.87e-02 -2.84e-02  1.76e-02]
   [ 4.01e-02 -1.72e-02 -1.18e-02]
   [-4.11e-02  2.38e-02  1.75e-02]
   [ 1.39e-02  4.17e-03 -1.85e-02]
   [ 3.01e-02  3.34e-02  1.80e-02]
   [-2.15e-02  2.57e-02 -1.76e-02]
   [ 3.03e-02  2.76e-02 -1.92e-02]
   [-1.69e-04 -3.20e-02 -1.46e-02]
   [-2.04e-02  5.06e-02 -8.02e-03]
   [ 2.39e-03  4.40e-02  1.46e-02]
   [ 4.68e-02 -1.11e-02 -1.19e-02]
   [ 2.06e-02  1.23e-02 -1.83e-02]
   [ 3.10e-02 -3.04e-02 -5.19e-03]
   [ 5.16e-02 -1.11e-02  1.23e-03]
   [-3.64e-02  5.66e-03  6.59e-03]
   [ 1.96e-02  4.70e-02  4.47e-03]
   [-9.40e-03  5.81e-02 -2.79e-03]
   [-3.64e-02  3.80e-02 -1.53e-02]
   [ 4.08e-02  2.50e-02  2.44e-02]
   [-3.92e-02  7.79e-03  3.37e-03]
   [-2.43e-02  4.11e-02  9.57e-03]
   [ 6.03e-03  5.31e-02  1.39e-03]
   [-9.87e-03  1.23e-02 -1.69e-02]
   [ 2.20e-02  2.05e-02 -1.65e-02]
   [-1.49e-02 -1.76e-02  1.33e-02]
   [ 5.66e-03  1.96e-02 -1.89e-02]
   [ 4.91e-02 -1.04e-03  7.55e-03]
   [-3.87e-02  9.08e-03  8.01e-03]
   [ 3.50e-02  5.77e-03  1.74e-02]
   [-4.44e-03 -1.66e-02 -1.78e-02]
   [ 5.33e-02  1.06e-02 -1.64e-02]
   [ 3.82e-02 -2.56e-02  2.62e-03]
   [ 6.65e-03  4.84e-02  1.03e-02]
   [ 4.77e-02  2.79e-02  2.19e-02]
   [-2.56e-02 -1.26e-02 -2.40e-03]
   [ 5.08e-02  3.15e-02  8.36e-03]
   [-1.05e-03 -3.78e-02 -3.56e-04]
   [ 2.84e-02 -3.75e-02  8.03e-03]
   [ 5.01e-02  1.82e-02 -1.80e-02]
   [-1.48e-02  2.00e-03 -1.64e-02]
   [ 4.33e-02  3.56e-02  1.66e-02]
   [ 4.52e-02 -1.54e-02 -1.08e-02]
   [ 4.81e-02  3.57e-02 -3.86e-03]
   [-2.61e-02  4.24e-02  5.94e-03]
   [-2.21e-02  3.59e-02  1.56e-02]
   [ 5.60e-02  1.86e-02  1.22e-03]
   [ 2.89e-02  4.19e-02 -1.41e-02]
   [ 4.55e-02  3.41e-02 -1.57e-02]
   [-4.13e-03 -2.86e-02 -9.77e-03]
   [-9.89e-03  1.96e-02  1.91e-02]
   [ 2.35e-02 -1.84e-02 -2.03e-02]
   [ 4.31e-02 -4.52e-03 -1.50e-02]
   [ 5.28e-02  2.06e-03  5.90e-05]
   [ 4.41e-02  4.19e-02 -9.28e-03]
   [ 3.60e-02  3.37e-02  1.91e-02]
   [-1.64e-02  1.98e-02  2.16e-02]
   [ 4.56e-02  3.91e-02 -1.23e-02]
   [-4.31e-02  3.18e-02 -8.84e-03]
   [ 3.87e-02 -2.18e-02 -6.53e-03]
   [ 4.07e-02  1.72e-02  2.38e-02]
   [-2.07e-02 -9.51e-03  1.32e-02]
   [ 3.01e-02 -1.08e-02 -1.71e-02]
   [-2.02e-03  2.62e-02 -1.83e-02]
   [ 4.59e-03  5.11e-03  1.89e-02]
   [-3.00e-02  3.63e-02 -1.73e-02]
   [ 2.82e-02 -3.60e-02  1.21e-02]
   [-1.93e-02 -2.11e-02 -2.20e-03]
   [-3.60e-02  7.84e-03  1.27e-02]
   [-1.33e-02  1.70e-02  1.97e-02]
   [ 3.83e-02  4.30e-02  2.82e-03]
   [ 4.92e-02  8.47e-03  1.16e-02]
   [ 4.53e-03  1.29e-02  1.92e-02]
   [-5.72e-03 -1.17e-02 -1.78e-02]
   [-3.30e-02  9.01e-03 -1.75e-02]
   [ 3.14e-02 -3.55e-02  7.84e-03]
   [ 4.67e-02  3.09e-02  2.08e-02]
   [-2.24e-02  8.87e-03  1.98e-02]
   [-4.02e-02  3.20e-02 -1.50e-02]
   [ 1.76e-02 -3.26e-02  1.64e-02]
   [-3.91e-03 -2.30e-02 -1.48e-02]
   [-2.86e-02  3.06e-02 -2.02e-02]
   [-2.59e-02  2.00e-02  2.48e-02]
   [-1.42e-03  3.20e-03 -1.70e-02]
   [-2.84e-02  3.90e-03  1.42e-02]
   [ 2.86e-02 -2.84e-02 -9.51e-03]
   [ 5.81e-03 -3.09e-02 -2.29e-02]
   [ 2.82e-02  3.87e-02  1.00e-02]
   [ 4.16e-02  1.98e-02 -1.99e-02]
   [ 3.83e-02  4.36e-02 -1.22e-02]
   [ 1.18e-02  3.61e-02  1.73e-02]
   [-4.22e-03  4.56e-02  1.47e-02]
   [-4.09e-02  1.53e-02 -3.23e-03]
   [-2.98e-03 -3.22e-02 -8.24e-03]]
# ---
# name: test_load[surface-sdf].15
  AttributeError("The selected attribute 'is_backbone' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].16
  AttributeError("The selected attribute 'is_alpha_carbon' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].17
  AttributeError("The selected attribute 'is_solvent' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].18
  AttributeError("The selected attribute 'is_nucleic' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].19
  AttributeError("The selected attribute 'is_peptide' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].2
  AttributeError("The selected attribute 'vdw_radii' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].20
  AttributeError("The selected attribute 'is_hetero' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].21
  AttributeError("The selected attribute 'is_carb' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].22
  AttributeError("The selected attribute 'bond_type' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].23
  AttributeError("The selected attribute 'mass' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].3
  AttributeError("The selected attribute 'lipophobicity' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].4
  AttributeError("The selected attribute 'charge' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].5
  AttributeError("The selected attribute 'res_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].6
  AttributeError("The selected attribute 'res_name' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].7
  AttributeError("The selected attribute 'atomic_number' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].8
  AttributeError("The selected attribute 'chain_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
